RESOLVED FIXED155400
REGRESSION (r188647): Teamtreehouse website sidebar buttons are not rendered
https://bugs.webkit.org/show_bug.cgi?id=155400
Summary REGRESSION (r188647): Teamtreehouse website sidebar buttons are not rendered
Dean Jackson
Reported 2016-03-12 17:39:17 PST
REGRESSION (r188647): Teamtreehouse website sidebar buttons are not rendered
Attachments
Patch (7.05 KB, patch)
2016-03-12 17:46 PST, Dean Jackson
andersca: review+
Dean Jackson
Comment 1 2016-03-12 17:45:31 PST
Dean Jackson
Comment 2 2016-03-12 17:46:02 PST
Dean Jackson
Comment 3 2016-03-12 17:55:41 PST
Note You need to log in before you can comment on or make changes to this bug.